--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-telegram-bot-api": "^0.52.0",
+    "redis": "^3.1.2",
     "taapi": "^1.2.9"
   }
 }
